# advisor

./: .gitignore  ARCHITECTURE.md  CREW_AI_GUIDE.md  Dockerfile  README.md  Start.cmd  build_docker.py  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/: crew_routes.py  routes.py
app/crew/: __init__.py  agents.py  integration.py  tasks.py
app/database/: connection.py
app/models/: analysis.py  suggestion.py
app/services/: code_analyzer.py
database/: init.sql
knowledge/: user_preference.txt
src/config/: agents.yaml  tasks.yaml
src/crew/: orchestrator.py
tests/: test_analyzer.py
