[project]
name = "advisor"
version = "0.1.0"
description = "Advisor using crewAI"
authors = [{ name = "Inaldo Ribeiro", email = "inaldo.icr@gmail.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
advisor = "advisor.main:run"
run_crew = "advisor.main:run"
train = "advisor.main:train"
replay = "advisor.main:replay"
test = "advisor.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
